--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
@@ -108,7 +108,7 @@
     function getToken() {        
         $.post("@Url.Content("~/token")",
             "username=admin" +
-            "&password=3edc4rfv" +
+            "&password=" +
             "&grant_type=password",
             { headers: { 'Content-Type': 'application/x-www-form-urlencoded' } }                
         ).success(function (data) {
