#81814 Error when selecting time in AnalyzeTab for change Module

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/EditorTemplates/Fields/TimeOutOfTable.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/EditorTemplates/Fields/TimeOutOfTable.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model DH.Helpdesk.Web.Models.Changes.ChangeEdit.ConfigurableFieldModel<DateTime?>
+@model DH.Helpdesk.Web.Models.Changes.ChangeEdit.ConfigurableFieldModel<string>
            
 @if (!Model.Show)
 {
