#81814 Be possible to select from pop up as in ver 4

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/Edit.cshtml
@@ -5,6 +5,7 @@
 @model DH.Helpdesk.Web.Models.Changes.ChangeEdit.InputModel
 
 @Scripts.Render("~/bundles/changes/change")
+@Styles.Render("~/timepicker/css")
 
 <script type="text/javascript">
     $(function() {
