--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Changes/Index.cshtml
@@ -6,6 +6,7 @@
 @model DH.Helpdesk.Web.Models.Changes.IndexModel
 
 @Scripts.Render("~/bundles/changes/index")
+@Styles.Render("~/timepicker/css")
 
 <script type="text/javascript">
     $(function() {
