--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/TimePicker.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/EditorTemplates/TimePicker.cshtml
@@ -37,6 +37,7 @@
     $(function() {
         $('#@controlId').timepicker({
             showMeridian: false,
+            showInputs: false,
             minuteStep: 1
         });
     });
