--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -293,6 +293,7 @@
                                         @Html.CheckBoxFor(m => Model.Customer.MyCasesUserGroup) &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Användargrupp")
                                     </td>
                                 </tr>
+                                @if (Model.AvailableInitiators.Any()) { 
                                 <tr id="initiators">
                                     <td class="span3">
                                         <br />
@@ -341,9 +342,10 @@
                                                     </select>
                                                 </td>
                                             </tr>
+                                           
                                         </table>
                                     </td>
-                                </tr>
+                                </tr> }
                                 <tr id="caseTypes">
                                     <td class="span3">
                                         <br />
