#85902 - Purchase date is missing for both Printer and Computer

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ContractFieldsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ContractFieldsViewModel.cshtml
@@ -11,6 +11,7 @@
                 @Html.EditorFor(m => m.ContractFieldsModel.ContractStartDate, "Fields/Date", new { id = "computer_edit_contractstartdate_datepicker" })
                 @Html.EditorFor(m => m.ContractFieldsModel.ContractEndDate, "Fields/Date", new { id = "computer_edit_contractenddate_datepicker" })
                 @Html.EditorFor(m => m.ContractFieldsModel.PurchasePrice, "Fields/Number")
+                @Html.EditorFor(m => m.ContractFieldsModel.PurchaseDate, "Fields/Date", new { id = "purchasedate_datepicker" })
                 @Html.EditorFor(m => m.ContractFieldsModel.AccountingDimension1, "Fields/Text")
                 @Html.EditorFor(m => m.ContractFieldsModel.AccountingDimension2, "Fields/Text")
                 @Html.EditorFor(m => m.ContractFieldsModel.AccountingDimension3, "Fields/Text")
