--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/InventoryFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/InventoryFieldsModel.cshtml
@@ -7,7 +7,7 @@
         <div class="span12">
             <table class="tableform">
                 @Html.EditorFor(m => m.BarCode, "Fields/Text")
-                @Html.EditorFor(m => m.PurchaseDate, "Fields/Date", new { id = "purchasedate_datepicker" })
+                @*@Html.EditorFor(m => m.PurchaseDate, "Fields/Date", new { id = "purchasedate_datepicker" }) For Workstation field moved to Contract, but stores in db in inventory for legacy support*@ 
             </table>
         </div>
     </div>
