--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ContractFieldsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Workstation/EditorTemplates/ContractFieldsViewModel.cshtml
@@ -1,6 +1,9 @@
 ﻿@using DH.Helpdesk.Web.Infrastructure
 @model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Computer.ContractFieldsViewModel
-@if (Model.ContractFieldsModel.ContractStatusId.Show || Model.ContractFieldsModel.ContractNumber.Show || Model.ContractFieldsModel.ContractStartDate.Show || Model.ContractFieldsModel.ContractEndDate.Show || Model.ContractFieldsModel.PurchasePrice.Show || Model.ContractFieldsModel.AccountingDimension1.Show || Model.ContractFieldsModel.AccountingDimension2.Show || Model.ContractFieldsModel.AccountingDimension3.Show || Model.ContractFieldsModel.AccountingDimension4.Show || Model.ContractFieldsModel.AccountingDimension5.Show)
+@if (Model.ContractFieldsModel.ContractStatusId.Show || Model.ContractFieldsModel.ContractNumber.Show || Model.ContractFieldsModel.ContractStartDate.Show ||
+     Model.ContractFieldsModel.ContractEndDate.Show || Model.ContractFieldsModel.PurchasePrice.Show || Model.ContractFieldsModel.PurchaseDate.Show ||
+     Model.ContractFieldsModel.AccountingDimension1.Show || Model.ContractFieldsModel.AccountingDimension2.Show || Model.ContractFieldsModel.AccountingDimension3.Show ||
+     Model.ContractFieldsModel.AccountingDimension4.Show || Model.ContractFieldsModel.AccountingDimension5.Show)
 {
     <h4>@Translation.Get("Avtal")</h4>
     <div class="row">
