--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/InventoryFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Shared/EditorTemplates/InventoryFieldsModel.cshtml
@@ -1,6 +1,6 @@
 ﻿@using DH.Helpdesk.Web.Infrastructure
 @model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Shared.InventoryFieldsModel
-@if (Model.BarCode.Show)
+@if (Model.BarCode.Show || Model.PurchaseDate.Show)
 {
     <h4>@Translation.GetCoreTextTranslation("Inventering")</h4>
     <div class="row">
