#88342 - mistyped data removed

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Document/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Document/_Input.cshtml
@@ -18,7 +18,7 @@
         }
 </script>
 
-<div class="content">dasdsadasdasdas
+<div class="content">
     @if (TempData["Error"] != null)
     {
         <div class="alert alert-error">@Translation.Get("Dokument", Enums.TranslationSource.TextTranslation)
