--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -111,6 +111,7 @@
         caseInitValues: {
             AdministratorId: '@Model.CaseDataModel.Performer_User_Id',
             CaseId: '@Model.CaseDataModel.Id',
+            caseGuid: '@Model.CaseDataModel.CaseGUID.ToString()',
             CustomerId: '@Model.CaseDataModel.Customer_Id',
             ReportedBy: @Html.Raw(Json.Encode(Model.CaseDataModel.ReportedBy)),
             PersonsName: @Html.Raw(Json.Encode(Model.CaseDataModel.PersonsName)),
