--- a/ExtendedCase/ExtendedCase.WebComponent/public/test.ejs
+++ b/ExtendedCase/ExtendedCase.WebComponent/public/test.ejs
@@ -96,7 +96,7 @@
         
         var state = {
         formParameters: {
-            formId: 2, 
+            formId: 126, 
             extendedCaseGuid: '',
             userGuid: '9005F3D3-D62B-4F54-85B3-63A8EFB80782',
             languageId: 1,
@@ -107,12 +107,13 @@
             //assignment parameters:
             customerId: 1,
             userRole: 4,
-            caseStatus: 0
+            caseStatus: 0,
+            caseGuid: "12345678-D62B-4F54-85B3-63A8EFB80782"
         }, 
         caseValues: { 
             caseField1: '2', 
             reportedby: '8',
-            test: 'val'  
+            test: 'val'
         } 
         };
 
