--- a/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
@@ -8,16 +8,29 @@
   </label>
   <div class="row">
     <div class="col-md-12">
-      <div *ngFor="let item of fileUploader.queue" icon="fa-paperclip">
-        <span class="filename" [ngStyle]="getStatusStyles(item)">{{ item?.file?.name }}</span>
-      </div>
       <div ng2FileDrop
           [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
           (fileOver)="fileOverBase($event)"
           [uploader]="fileUploader"
-          class="well my-drop-zone">
+          class="file-drop well my-drop-zone">
         Drop files here
       </div>
+
+      <div class="file-list">
+        <div *ngFor="let item of files; trackBy: identify"
+          class="file-item"
+          (click)="downloadFile(item)">
+          <span class="glyphicon glyphicon-paperclip" ></span>
+          <span class="filename" >{{ item.fileName }}</span>
+          <span class="glyphicon glyphicon-remove delete"
+            (click)="deleteFile(item)"></span>
+        </div>
+        <div *ngFor="let item of fileUploader.queue" class="file-item uploading">
+          <span class="glyphicon glyphicon-paperclip"></span>
+          <span class="filename" [ngStyle]="getStatusStyles(item)">{{ item?.file?.name }}</span>
+        </div>
+      </div>
+
       <label for="fileupload">
         <input type="file"  id="fileupload" name="fileupload" class="fileupload"
           ng2FileSelect [uploader]="fileUploader" multiple />
