#89440 - self service & mobile fixes

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -134,7 +134,7 @@
             CostCentre: '@Model.CaseDataModel.CostCentre',
             InventoryType: @Html.Raw(Json.Encode(Model.CaseDataModel.InventoryType)),
             InventoryLocation: @Html.Raw(Json.Encode(Model.CaseDataModel.InventoryLocation)),
-            /*CaseFiles: Model.CaseDataModel.CaseFiles*/
+            CaseFiles: '@Html.Raw(Model.CaseDataModel.CaseFiles != null ? Json.Encode(Model.CaseDataModel.CaseFiles.Select(f => new { f.Id, f.FileName })) : "")'
         },
 
         extendedCaseGuid: '@(Model.ExtendedCaseDataModel.ExtendedCaseGuid)',
