--- a/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
@@ -25,7 +25,7 @@
           class="file-item"
           >
           <span class="glyphicon glyphicon-paperclip" ></span>
-          <span class="filename" ><a href="javascript:return false;" (click)="downloadFile(item)">{{ item.fileName }}</a></span>
+          <span class="filename" ><a href="javascript:void(0);" (click)="downloadFile(item)">{{ item.fileName }}</a></span>
           <span class="glyphicon glyphicon-remove delete"
             (click)="deleteFile(item)"></span>
         </div>
