--- a/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
@@ -12,7 +12,7 @@
       <validation-error [control]="fieldModel.control"></validation-error>
       <validation-warnings [warnings]="fieldModel.warnings"></validation-warnings>
 
-      <div ng2FileDrop *ngIf="!fieldModel.control.disabled"
+      <div ng2FileDrop *ngIf="!fieldModel.control.disabled && formInfo.applicationType !== 'HelpdeskMobile'"
           [ngClass]="{'nv-file-over': hasBaseDropZoneOver}"
           (fileOver)="fileOverBase($event)"
           [uploader]="fileUploader"
